ISSD-1499 Fixed Dashboard - the 'Expiring Soon' field is not showing the value

--- a/workspaces/liferay-partner-workspace/client-extensions/liferay-partner-custom-element/src/routes/dashboard/MDFRequestChart/index.css
+++ b/workspaces/liferay-partner-workspace/client-extensions/liferay-partner-custom-element/src/routes/dashboard/MDFRequestChart/index.css
@@ -8,7 +8,7 @@
 
 @media (min-width: 768px) {
 	.dashboard-mdf-chart {
-		height: 544px;
+		height: auto;
 		min-height: 544px;
 	}
 }
